--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 <b>stopka</b>, 3-kolumny scalone
 </td>
 </tr>
+  <td align=center>
+<iframe width=650 height=420 name="obszar_glowny" src="glowny_twoje_nazwisko.html" border="0"></iframe>
+<b>obszar główny</b>
+</td>
 </table>
 </body>
 </html>
