--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<html>
+    <head>
+        <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
+    </head>
+    <body>
+        <!-- Morton 11.04 | Morton 16.05 -->
+        <table width=95% border="1" align="center">
+            <tr>
+                <td width=18% align=center>
+                    <marquee bgcolor="#3399ff"> Morton </marquee>
+                    <a href="Mort_z2.html" target="strony"> ZADANIE 2 </a> <br>
+                    <a href="Mort_z3.html" target="strony"> ZADANIE 3</a> <br>
+                    <a href="Mort_z4.html" target="strony"> ZADANIE 4 </a> <br>
+                    <a href="Mort_z5_1.html" target="strony"> ZADANIE 5-IMPOROTWANY </a> <br>
+                    <a href="Mort_z5_2.html" target="strony"> ZADANIE 5-ZEWNETRZNY </a> <br>
+                    <a href="Mort_z5_3.html" target="strony"> ZADANIE 5-WEWNETRZNY </a> <br>
+                    <a href="Mort_z5_4.html" target="strony"> ZADANIE 5-LINIOWY </a> <br>
+                    <a href="Mort_z6.html" target="strony"> ZADANIE 6 </a> <br>
+                    <a href="Mort_z7.html" target="strony"> ZADANIE 7 </a> <br>
+                    <a href="Mort_z8.html" target="strony"> ZADANIE 8 </a> <br>
+                    <a href="Mort_z9.html" target="strony"> ZADANIE 9 </a> <br>
+                    <a href="Mort_z10.html" target="strony"> ZADANIE 10 </a> <br>
+                    <a href="Mort_z11.html" target="strony"> ZADANIE 11 </a> <br>
+                    <a href="Mort_z12.html" target="strony"> ZADANIE 12 </a> <br>
+                    <a href="Mort_z13.html" target="strony"> ZADANIE 13 </a> <br>
+                    <a href="Mort_z14.html" target="strony"> ZADANIE 14 </a> <br>
+                    <a href="Mort_z15.html" target="strony"> ZADANIE 15 </a> <br>
+                    <a href="Mort_z16.html" target="strony"> ZADANIE 16 </a> <br>
+                    <a href="Mort_z17_1.html" target="strony"> ZADANIE17-1 </a> <br>
+                    <a href="Mort_z17_2.html" target="strony"> ZADANIE17-2 </a> <br>
+                    <a href="Mort_z18.html" target="strony"> ZADANIE 18 </a> <br>
+                    <a href="Mort_z19.html" target="strony"> ZADANIE 19 </a> <br>
+                    <a href="Mort_z20.html" target="strony"> ZADANIE 20 </a> <br>
+                    <a href="Mort_z21.html" target="strony"> ZADANIE 21 </a> <br>
+                    <a href="Mort_z22.html" target="strony"> ZADANIE 22 </a> <br>
+                    <a href="Mort_z23.html" target="strony"> ZADANIE 23 </a> <br>
+                  
+                </td>
+                        
+                    <td align=center> <iframe width=800 height=650 name="strony" src="start.html" border="0"> </iframe> </td>
 
+                <td width=18% align=center>
+                    <a href="start.html" target="strony">Start</a><br>
+                    <a href="kod_z5_1_Morton.html" target="strony"> Z5_KOD_IMPORTOWANY </a> <br>
+                    <a href="kod_z5_2_Morton.html" target="strony"> Z5_KOD_ZEWNETRZNY </a> <br>
+                    <a href="kod_z5_3_Morton.html" target="strony"> Z5_KOD_WEWNETRZNY </a><br>
+                    <a href="kod_z5_4_Morton.html" target="strony"> Z5_KOD_LINIOWY </a> <br>
+                    <a href="kod_z6_Morton.html" target="strony"> Z6_KOD </a> <br>
+                    <a href="kod_z13_Morton.html" target="strony"> Z13_KOD </a> <br>
+                    <a href="kod_z15_Morton.html" target="strony"> Z15_KOD </a> <br>
+                    <a href="kod_z17_1_Morton.html" target="strony"> Z17_P1_KOD </a> <br>
+                    <a href="kod_z17_2_Morton.html" target="strony"> Z17_P2_KOD </a> <br>
+                    <a href="kod_z18_Morton.html" target="strony"> ZADANIE 18 </a> <br>
+                    <a href="kod_z19_Morton.html" target="strony"> ZADANIE 19 </a> <br>
+                    <a href="kod_z20_Morton.html" target="strony"> ZADANIE 20 </a> <br>
+                    <a href="kod_z22_Morton.html" target="strony"> ZADANIE 22 </a> <br>
+                    <a href="kod_z23_Morton.html" target="strony"> ZADANIE 23 </a> <br>
+                </td>
+            </tr>
+        </table>
+    </body>
+</html>
