--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   
                 </td>
                         
-                    <td align=center> <iframe width=800 height=650 name="strony" src="start.hml" border="0"> </iframe> </td>
+                    <td align=center> <iframe width=800 height=650 name="strony" src="start.html" border="0"> </iframe> </td>
 
                 <td width=18% align=center>
                     <a href="start.html" target="strony">Start</a><br>
